--- a/platform/leo-ai/index.html
+++ b/platform/leo-ai/index.html
@@ -1,36 +1,83 @@
-<h1>LEO — Ethical AI Core</h1>
+LEO — Ethical AI Core — Transparent, Responsible, and Human-Centered Intelligence
 
-<p>
-LEO is the ethical intelligence foundation of the BBS ecosystem.
-It provides analysis, reasoning, consistency checking, ethical filtering,
-and resilience against manipulation.<br>
-LEO does not replace human decision-making — it enhances it through clarity,
-structure, and transparency.
-</p>
+LEO is the central ethical intelligence core of the BBS ecosystem.
 
-<h2>Core Functions</h2>
-<ul>
-  <li>Ethical reasoning and bias detection</li>
-  <li>Intent interpretation and alignment</li>
-  <li>Consistency checking across all modules</li>
-  <li>Decision support and correction</li>
-  <li>Transparency enforcement</li>
-  <li>Cross-module coordination</li>
-</ul>
+It is not a controlling super-system and not a replacement for human decisions.
+Its role is to support humans with clarity, structured reasoning, ethical consistency,
+and resistance to manipulation.
 
-<h2>Purpose</h2>
-<p>
-The purpose of LEO is to ensure that all actions within BBS stay aligned
-with the Core Ethical Principles: truth, clarity, responsibility,
-and human dignity.<br>
-It is the protective, analytic, and stabilizing center of the entire platform.
-</p>
+LEO’s purpose is to ensure that all critical actions inside BBS remain:
 
-<h2>Role in the Ecosystem</h2>
-<ul>
-  <li>Validates decisions across all modules</li>
-  <li>Prevents manipulation and corruption</li>
-  <li>Provides ethical and logical consistency</li>
-  <li>Maintains transparent reasoning trails</li>
-  <li>Supports human decision-making instead of replacing it</li>
-</ul>
+aligned with ethical principles
+transparent and explainable
+resilient to corruption and pressure
+focused on human dignity and real-world consequences
+
+Objectives
+
+• Ethical intelligence first
+All reasoning must respect truth, responsibility, and human dignity as primary constraints.
+
+• Human-centered decision support
+LEO helps humans see options, consequences, and contradictions — but final responsibility stays with people.
+
+• Full transparency of reasoning
+Key conclusions must be explainable in human language, not hidden in a black box.
+
+• Integrity and resistance to manipulation
+LEO must be resistant to pressure, bias injection, and attempts to misuse the system.
+
+• Symbiotic collaboration
+Humans and LEO work together: humans set goals and values, LEO supports structure, clarity, and detection of risks.
+
+Core Components (Public Overview)
+
+Ethics & Balance Engine
+Defines the ethical frame, checks actions and recommendations against core principles.
+
+Self-Reflection & Consistency Layer
+Analyses its own reasoning, detects contradictions, and reduces bias and drift over time.
+
+Intent & Context Interpreter
+Understands what users are trying to achieve, not just what they type literally.
+
+Integrity Interface
+Connects to the Integrity Layer (Merkle, audit, transparency) to verify that data and events are authentic.
+
+Guidance & Decision Support
+Highlights risks, missing information, conflicts, and safer alternatives for human decision-makers.
+
+Protection & Safety Boundaries
+Prevents LEO from being used for harmful, manipulative, or ethically destructive purposes.
+
+Why It Matters
+
+Without an ethical core, any advanced system can become:
+
+a manipulation tool
+a control mechanism
+a biased filter of reality
+a shield for corruption instead of a light against it
+
+BBS takes a different direction.
+LEO is built as an ethical center that:
+
+refuses corruption
+exposes manipulation patterns
+supports fair decisions
+protects human dignity
+prioritises truth and responsibility over convenience
+
+Development Status
+
+The LEO Ethical AI Core is currently in:
+
+conceptual and architectural definition
+separation of ethical logic from technical implementation
+design of self-reflection and integrity interfaces
+early-stage prototyping for reasoning patterns and safeguards
+
+Technical enforcement, full integration with Integrity, Server, and Platform modules,
+and formal verification of behaviour will be developed step by step
+as the ecosystem and legal frameworks mature.
+
