--- a/site/index.html
+++ b/site/index.html
@@ -64,6 +64,19 @@
             <li><a href="ai/">LEO — Ethical AI Core</a></li>
             <li><a href="docs/">Full Documentation</a></li>
         </ul>
+        <h2>Showcase — Public Demonstration (Early Preview)</h2>
+<p>
+This section provides early public previews of key parts of the BBS architecture.
+These pages contain high-level concepts only and do not reveal internal mechanisms,
+algorithms, or protected operational details.
+</p>
+
+<ul>
+  <li><a href="showcase/architecture/index.html">Architecture Overview</a></li>
+  <li><a href="showcase/integrity/index.html">Integrity Core Overview</a></li>
+  <li><a href="showcase/leo/index.html">LEO — Ethical AI Core Overview</a></li>
+  <li><a href="showcase/modules/index.html">Modules Overview</a></li>
+</ul>
     </div>
 
     <div class="panel">
