--- a/site/index.html
+++ b/site/index.html
@@ -72,8 +72,8 @@ algorithms, or protected operational details.
 </p>
 
 <ul>
-  <li><a href="../showcase/architecture/index.html">Architecture Overview</a></li>
-  <li><a href="../showcase/integrity/index.html">Integrity Core Overview</a></li>
+  <li><a href="/showcase/architecture/index.html">Architecture Overview</a></li>
+  <li><a href="showcase/integrity/index.html">Integrity Core Overview</a></li>
   <li><a href="../showcase/leo/index.html">LEO — Ethical AI Core Overview</a></li>
   <li><a href="../showcase/modules/index.html">Modules Overview</a></li>
 </ul>
