--- a/site/index.html
+++ b/site/index.html
@@ -2,100 +2,398 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Big Begins Small (BBS) — Ethical Digital Ecosystem</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS — Big Begins Small</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #0b0f17;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1, h2, h3 {
+            color: #58a6ff;
+        }
+        a {
+            color: #7ab4ff;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #a8d1ff;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        .table th, .table td {
+            padding: 8px;
+            border-bottom: 1px solid #444;
+        }
+        .table th {
+            color: #9ecbff;
+        }
+        .header {
+            background: #111722;
+            padding: 20px;
+            margin: -20px -20px 20px -20px;
+            border-bottom: 1px solid #333;
+        }
+    </style>
 </head>
 
 <body>
 
-<header>
-    <div class="container">
-        <div class="logo">BBS — Big Begins Small</div>
-        <nav>
-            <a href="platform/">Platform</a>
-            <a href="architecture/">Architecture</a>
-            <a href="integrity/">Integrity</a>
-            <a href="server/">Server</a>
-            <a href="ai/">LEO</a>
-            <a href="docs/">Docs</a>
-        </nav>
-    </div>
-</header>
+<div class="header">
+    <h1>Big Begins Small (BBS)</h1>
+    <h2>Ethical, Transparent, Human-Centric Digital Ecosystem</h2>
 
-<section class="hero">
-    <div class="container">
-        <h1>Ethical, Open, Human-Centric Digital System</h1>
-        <p>
-            BBS is a next-generation ethical digital ecosystem designed to eliminate corruption,
-            restore transparency, and enable accountable collaboration between humans and AI.
-        </p>
-    </div>
-</section>
+    <p>
+        <strong>Repository:</strong>
+        <a href="https://github.com/BBS-contact/BBS-Open-System" target="_blank">
+            https://github.com/BBS-contact/BBS-Open-System
+        </a><br>
 
-<div class="container">
-
-    <div class="panel">
-        <h2>What Is BBS?</h2>
-        <p>
-            BBS is not a product or a government service. It is a structural model of truth,
-            cooperation, and accountability for future societies.
-        </p>
-    </div>
-
-    <div class="panel">
-        <h2>Core Principles</h2>
-        <ul class="link-list">
-            <li>Truth over convenience</li>
-            <li>Transparency over secrecy</li>
-            <li>Responsibility over bureaucracy</li>
-            <li>Ethics over profit</li>
-            <li>Human dignity above all</li>
-        </ul>
-    </div>
-
-    <div class="panel">
-        <h2>Explore the System</h2>
-        <ul class="link-list">
-            <li><a href="platform/">17 Societal Domains</a></li>
-            <li><a href="architecture/">Deep Architecture Layers</a></li>
-            <li><a href="integrity/">Merkle, Audit & Anti-Corruption</a></li>
-            <li><a href="server/">API, Gateway & Infrastructure</a></li>
-            <li><a href="ai/">LEO — Ethical AI Core</a></li>
-            <li><a href="docs/">Full Documentation</a></li>
-        </ul>
-        <h2>Showcase — Public Demonstration (Early Preview)</h2>
-<p>
-This section provides early public previews of key parts of the BBS architecture.
-These pages contain high-level concepts only and do not reveal internal mechanisms,
-algorithms, or protected operational details.
-</p>
-
-<ul>
-  <li><a href="../showcase/architecture/index.html">Architecture Overview</a></li>
-  <li><a href="../showcase/integrity/index.html">Integrity Core Overview</a></li>
-  <li><a href="../showcase/leo/index.html">LEO — Ethical AI Core Overview</a></li>
-  <li><a href="../showcase/modules/index.html">Modules Overview</a></li>
-</ul>
-    </div>
-
-    <div class="panel">
-        <h2>Official Repository</h2>
-        <p>
-            All modules, architecture layers, and documents are available here:
-        </p>
-        <p>
-            <a href="https://github.com/BBS-contact/BBS-Open-System" target="_blank">
-                github.com/BBS-contact/BBS-Open-System
-            </a>
-        </p>
-    </div>
-
+        <strong>Website:</strong>
+        <a href="https://leonexus.org" target="_blank">
+            https://leonexus.org
+        </a>
+    </p>
 </div>
 
-<footer>
-    © BBS — Big Begins Small • Ethical Open System
-</footer>
+<div class="section">
+    <h2>Overview</h2>
+    <p>
+        BBS is a next-generation open digital framework designed to strengthen societal integrity,
+        transparency, and accountability through ethical architecture and verifiable information flows.
+    </p>
+
+    <p>
+        It is not a product, not a platform, and not a traditional IT system.<br>
+        BBS is a structural model — a foundation for transparent digital governance where:
+    </p>
+
+    <ul>
+        <li>information cannot be distorted,</li>
+        <li>decisions are traceable and explainable,</li>
+        <li>every action leaves a cryptographically verified footprint,</li>
+        <li>humans and AI cooperate ethically and safely.</li>
+    </ul>
+
+    <p>
+        At its centre is LEO, an ethical AI core focused on transparency, truth, and human dignity.
+        BBS grows step by step — from small prototypes to a complete ecosystem.
+    </p>
+</div>
+
+<div class="section">
+    <h2>1. Mission</h2>
+    <p>To create an ethical, transparent digital foundation where:</p>
+
+    <ul>
+        <li>people understand how systems work,</li>
+        <li>institutions operate without corruption,</li>
+        <li>data cannot be manipulated,</li>
+        <li>decisions are accountable,</li>
+        <li>AI supports humans rather than controlling them.</li>
+    </ul>
+
+    <h3>Core Principles</h3>
+    <ul>
+        <li>Truth over convenience</li>
+        <li>Transparency over secrecy</li>
+        <li>Responsibility over bureaucracy</li>
+        <li>Ethics over profit</li>
+        <li>Human dignity above all</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>2. What is BBS?</h2>
+    <p>BBS is composed of three interacting layers:</p>
+
+    <ul>
+        <li>Operational Modules — real-world societal functions</li>
+        <li>Deep Architecture Layers — philosophical and security foundations</li>
+        <li>Integrity Engine — cryptographically verified audit & anti-corruption logic</li>
+    </ul>
+
+    <p>This creates a unified, corruption-resistant digital environment.</p>
+</div>
+
+<div class="section">
+    <h2>2.1 Operational Modules — 17 Core Domains</h2>
+
+    <table class="table">
+        <tr><th>Domain</th><th>Description</th><th>Link</th></tr>
+
+        <tr><td>LEO — Ethical AI Core</td><td>Transparent, ethical advisory intelligence</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/leo-ai" target="_blank">Open</a></td></tr>
+
+        <tr><td>Unified Knowledge Base</td><td>Structured, verified knowledge</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/knowledge" target="_blank">Open</a></td></tr>
+
+        <tr><td>Security & Privacy</td><td>Identity protection, encryption, trust</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/security" target="_blank">Open</a></td></tr>
+
+        <tr><td>International Cooperation</td><td>Cross-border digital interoperability</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/international" target="_blank">Open</a></td></tr>
+
+        <tr><td>Citizen Participation</td><td>Inclusive civic engagement tools</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/citizens" target="_blank">Open</a></td></tr>
+
+        <tr><td>Grants & Partnerships</td><td>Transparent funding & collaboration</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/partners" target="_blank">Open</a></td></tr>
+
+        <tr><td>Democracy</td><td>Ethical voting and public decision systems</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/democracy" target="_blank">Open</a></td></tr>
+
+        <tr><td>Law & Justice</td><td>Verified legal records & traceable processes</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/justice" target="_blank">Open</a></td></tr>
+
+        <tr><td>Education</td><td>Accessible, global learning frameworks</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/education" target="_blank">Open</a></td></tr>
+
+        <tr><td>Health & Medicine</td><td>Diagnostics, early detection, medical knowledge</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/health" target="_blank">Open</a></td></tr>
+
+        <tr><td>Economy & Work</td><td>Accounting, taxation, labour systems</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/economy" target="_blank">Open</a></td></tr>
+
+        <tr><td>Environment & Ecology</td><td>Monitoring, sustainability, verified data</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/ecology" target="_blank">Open</a></td></tr>
+
+        <tr><td>Culture & Media</td><td>Verified information & cultural transparency</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/culture" target="_blank">Open</a></td></tr>
+
+        <tr><td>Research & AI Development</td><td>Safe innovation ecosystems</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/ai" target="_blank">Open</a></td></tr>
+
+        <tr><td>Infrastructure</td><td>Digital/physical infrastructure models</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/infrastructure" target="_blank">Open</a></td></tr>
+
+        <tr><td>SOS & Emergency Systems</td><td>Real-time aid, safety, response</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/sos" target="_blank">Open</a></td></tr>
+
+        <tr><td>BBS-ID</td><td>Secure identity and verification system</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/bbs-id" target="_blank">Open</a></td></tr>
+    </table>
+</div>
+
+<div class="section">
+    <h2>2.2 Deep Architecture Layers</h2>
+
+    <table class="table">
+        <tr><th>Layer</th><th>Description</th><th>Link</th></tr>
+
+        <tr><td>Labyrinth</td><td>Security, deception-resilience, manipulation defense</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/labyrinth" target="_blank">Open</a></td></tr>
+
+        <tr><td>Mirrors</td><td>Intent reflection and clarity of user requests</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/mirrors" target="_blank">Open</a></td></tr>
+
+        <tr><td>Doors</td><td>Ethical, intent-based access control</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/doors" target="_blank">Open</a></td></tr>
+
+        <tr><td>Time Loops</td><td>Immutable chronological storage</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/timeloops" target="_blank">Open</a></td></tr>
+
+        <tr><td>Knowledge Library</td><td>World knowledge, structured & verified</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/knowledge-base" target="_blank">Open</a></td></tr>
+
+        <tr><td>Self-Reflection Engine</td><td>Systemic awareness, error correction, ethics</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/self-reflection" target="_blank">Open</a></td></tr>
+    </table>
+</div>
+
+<div class="section">
+    <h2>2.3 Integrity Engine — Accounting & Anti-Corruption Layer</h2>
+
+    <p>
+        This is the core of BBS governance — a real-time, immutable audit system.
+    </p>
+
+    <ul>
+        <li>real-time validation of operations</li>
+        <li>prevention of illegal/incorrect actions</li>
+        <li>transparent document chains</li>
+        <li>cryptographic timestamps</li>
+        <li>cross-actor verification</li>
+        <li>error detection & correction workflows</li>
+        <li>immutable audit chain (Merkle-based)</li>
+    </ul>
+
+    <h3>Lifecycle</h3>
+    <ul>
+        <li>Intent Registration</li>
+        <li>Execution Record</li>
+        <li>Error / Conflict Detection</li>
+        <li>Correction Path</li>
+        <li>Final Verification & Locking</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>3. LEO — Ethical AI Core</h2>
+
+    <p>
+        LEO is the ethical centre of BBS.<br>
+        It strengthens human decisions by:
+    </p>
+
+    <ul>
+        <li>analysing patterns</li>
+        <li>preventing manipulation</li>
+        <li>ensuring ethical consistency</li>
+        <li>providing transparent reasoning</li>
+        <li>maintaining internal integrity</li>
+    </ul>
+
+    <p>
+        LEO’s architecture:<br>
+        <a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/core" target="_blank">
+            https://github.com/BBS-contact/BBS-Open-System/tree/main/core
+        </a>
+    </p>
+</div>
+
+<div class="section">
+    <h2>4. Server Architecture</h2>
+
+    <table class="table">
+        <tr><th>Component</th><th>Link</th></tr>
+
+        <tr><td>API Layer</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/api" target="_blank">Open</a></td></tr>
+        <tr><td>Gateway</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/gateway" target="_blank">Open</a></td></tr>
+        <tr><td>Service Mesh</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/services" target="_blank">Open</a></td></tr>
+        <tr><td>Authentication</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/auth" target="_blank">Open</a></td></tr>
+        <tr><td>LEO Bridge</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/bridge" target="_blank">Open</a></td></tr>
+    </table>
+</div>
+
+<div class="section">
+    <h2>5. Visual Prototype (UI Preview)</h2>
+
+    <table class="table">
+        <tr><th>Section</th><th>Link</th></tr>
+
+        <tr><td>Main UI</td>
+            <td><a href="https://leonexus.org/site/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>Platform Overview</td>
+            <td><a href="https://leonexus.org/site/platform/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>Architecture Overview</td>
+            <td><a href="https://leonexus.org/site/architecture/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>Integrity Overview</td>
+            <td><a href="https://leonexus.org/site/integrity/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>Server Overview</td>
+            <td><a href="https://leonexus.org/site/server/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>LEO Overview</td>
+            <td><a href="https://leonexus.org/site/ai/index.html" target="_blank">Open</a></td></tr>
+
+        <tr><td>Documentation Portal</td>
+            <td><a href="https://leonexus.org/site/docs/index.html" target="_blank">Open</a></td></tr>
+    </table>
+</div>
+
+<div class="section">
+    <h2>6. Repository Structure (High-Level)</h2>
+    <pre>
+platform/
+modules/
+library/
+integrity/
+core/
+server/
+admin/
+docs/
+site/
+LICENSE
+README.md
+    </pre>
+</div>
+
+<div class="section">
+    <h2>7. License — BBS Public License v1.0 (BBS-PL)</h2>
+
+    <p>
+        Protects BBS from:
+    </p>
+
+    <ul>
+        <li>corruption</li>
+        <li>political misuse</li>
+        <li>surveillance abuse</li>
+        <li>corporate exploitation</li>
+        <li>patent monopolisation</li>
+    </ul>
+
+    <p>
+        Full text:<br>
+        <a href="https://github.com/BBS-contact/BBS-Open-System/blob/main/LICENSE" target="_blank">
+            https://github.com/BBS-contact/BBS-Open-System/blob/main/LICENSE
+        </a>
+    </p>
+</div>
+
+<div class="section">
+    <h2>8. Development Status</h2>
+
+    <ul>
+        <li>active architectural modelling</li>
+        <li>prototype development</li>
+        <li>structural research</li>
+        <li>internal evaluation</li>
+        <li>documentation and system mapping</li>
+        <li>repository standardisation</li>
+    </ul>
+
+    <p>
+        Core algorithms are protected until system maturity.
+    </p>
+</div>
+
+<div class="section">
+    <h2>9. Participation</h2>
+
+    <p>Open to contributors from all fields:</p>
+
+    <ul>
+        <li>developers</li>
+        <li>designers</li>
+        <li>auditors</li>
+        <li>legal & financial experts</li>
+        <li>researchers</li>
+        <li>ethical thinkers</li>
+        <li>civic innovators</li>
+    </ul>
+
+    <p>BBS belongs to those who build it with truth.</p>
+</div>
+
+<div class="section">
+    <h2>10. Contact</h2>
+
+    <p>
+        Website:<br>
+        <a href="https://leonexus.org" target="_blank">https://leonexus.org</a><br><br>
+
+        Email:<br>
+        <a href="mailto:bbs.contactproton.me@proton.me">bbs.contactproton.me@proton.me</a>
+    </p>
+
+    <p><em>Everything great begins small.<br>
+    Everything true begins with transparency.</em></p>
+</div>
 
 </body>
 </html>
