--- a/site/index.html
+++ b/site/index.html
@@ -394,6 +394,41 @@ README.md
     <p><em>Everything great begins small.<br>
     Everything true begins with transparency.</em></p>
 </div>
+<footer style="
+    margin-top: 60px;
+    padding: 20px;
+    border-top: 1px solid #333;
+    text-align: center;
+    color: #888;
+    font-size: 14px;
+">
+    <p>
+        © 2023–2025 Big Begins Small (BBS).  
+        All intellectual rights reserved to the original author and creator — Pavlo Martseniuk.
+    </p>
+
+    <p>
+        Released under the 
+        <a href="https://github.com/BBS-contact/BBS-Open-System/blob/main/LICENSE" 
+           target="_blank" 
+           style="color:#7ab4ff;">
+            BBS Public License v1.0 (BBS-PL)
+        </a>.
+    </p>
+
+    <p>
+        Unauthorized copying, commercial use, political misuse, surveillance exploitation,  
+        or patent monopolisation of the BBS concept, architecture, or methodology is strictly prohibited.
+    </p>
+
+    <p>
+        This project is provided solely for research, transparency, public benefit,  
+        and collaborative ethical development.
+    </p>
+</footer>
+
+</body>
+</html>
 
 </body>
 </html>
