--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <tr><th>Section</th><th>Link</th></tr>
 
         <tr><td>Main UI</td>
-            <td><a href="https://leonexus.org/site/index.html" target="_blank">Open</a></td></tr>
+            <td><a href="https://leonexus.org/index.html" target="_blank">Open</a></td></tr>
 
         <tr><td>Platform Overview</td>
             <td><a href="https://leonexus.org/site/platform/index.html" target="_blank">Open</a></td></tr>
@@ -394,6 +394,7 @@ README.md
     <p><em>Everything great begins small.<br>
     Everything true begins with transparency.</em></p>
 </div>
+
 <footer style="
     margin-top: 60px;
     padding: 20px;
@@ -429,4 +430,3 @@ README.md
 
 </body>
 </html>
-
