--- a/index.html
+++ b/index.html
@@ -13,31 +13,13 @@
             padding: 20px;
             line-height: 1.6;
         }
-        h1, h2, h3 {
-            color: #58a6ff;
-        }
-        a {
-            color: #7ab4ff;
-            text-decoration: underline;
-        }
-        a:hover {
-            color: #a8d1ff;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-        .table th, .table td {
-            padding: 8px;
-            border-bottom: 1px solid #444;
-        }
-        .table th {
-            color: #9ecbff;
-        }
+        h1, h2, h3 { color: #58a6ff; }
+        a { color: #7ab4ff; text-decoration: underline; }
+        a:hover { color: #a8d1ff; }
+        .section { margin-bottom: 40px; }
+        .table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+        .table th, .table td { padding: 8px; border-bottom: 1px solid #444; }
+        .table th { color: #9ecbff; }
         .header {
             background: #111722;
             padding: 20px;
@@ -203,7 +185,7 @@
         <tr><td>Time Loops</td><td>Immutable chronological storage</td>
             <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/timeloops" target="_blank">Open</a></td></tr>
 
-        <tr><td>Knowledge Library</td><td>World knowledge, structured & verified</td>
+        <tr><td>Knowledge Base</td><td>World knowledge, structured & verified</td>
             <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/library/knowledge-base" target="_blank">Open</a></td></tr>
 
         <tr><td>Self-Reflection Engine</td><td>Systemic awareness, error correction, ethics</td>
@@ -268,11 +250,20 @@
     <table class="table">
         <tr><th>Component</th><th>Link</th></tr>
 
-        <tr><td>API Layer</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/api" target="_blank">Open</a></td></tr>
-        <tr><td>Gateway</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/gateway" target="_blank">Open</a></td></tr>
-        <tr><td>Service Mesh</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/services" target="_blank">Open</a></td></tr>
-        <tr><td>Authentication</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/auth" target="_blank">Open</a></td></tr>
-        <tr><td>LEO Bridge</td><td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/bridge" target="_blank">Open</a></td></tr>
+        <tr><td>API Layer</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/api" target="_blank">Open</a></td></tr>
+
+        <tr><td>Gateway</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/gateway" target="_blank">Open</a></td></tr>
+
+        <tr><td>Service Mesh</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/services" target="_blank">Open</a></td></tr>
+
+        <tr><td>Authentication</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/auth" target="_blank">Open</a></td></tr>
+
+        <tr><td>LEO Bridge</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/server/bridge" target="_blank">Open</a></td></tr>
     </table>
 </div>
 
@@ -283,7 +274,7 @@
         <tr><th>Section</th><th>Link</th></tr>
 
         <tr><td>Main UI</td>
-            <td><a href="https://leonexus.org/index.html" target="_blank">Open</a></td></tr>
+            <td><a href="https://leonexus.org/site/index.html" target="_blank">Open</a></td></tr>
 
         <tr><td>Platform Overview</td>
             <td><a href="https://leonexus.org/site/platform/index.html" target="_blank">Open</a></td></tr>
