--- a/showcase/modules/index.html
+++ b/showcase/modules/index.html
@@ -1,100 +1,218 @@
-BBS Modular Structure — Public Showcase Overview
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>BBS Modular Structure — Public Showcase</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #0b0f17;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 40px;
+            line-height: 1.7;
+        }
+        h1, h2 {
+            color: #58a6ff;
+        }
+        h3 {
+            color: #8ab4ff;
+        }
+        a {
+            color: #7ab4ff;
+            text-decoration: underline;
+        }
+        a:hover {
+            color: #a8d1ff;
+        }
+        .section {
+            margin-bottom: 50px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+        th, td {
+            padding: 10px;
+            border-bottom: 1px solid #333;
+        }
+        th {
+            color: #9ecbff;
+            text-align: left;
+        }
+        footer {
+            margin-top: 80px;
+            padding-top: 20px;
+            border-top: 1px solid #333;
+            text-align: center;
+            color: #777;
+            font-size: 14px;
+        }
+    </style>
+</head>
 
-This page presents a high-level overview of the modular structure of BBS.
-It is designed for public understanding and transparency, without exposing internal
-logic, algorithms, or privileged operational details.
+<body>
 
-Modularity in BBS
+<h1>BBS Modular Structure — Public Showcase</h1>
+<p>
+    This page provides a high-level overview of the modular ecosystem of BBS.  
+    It is designed for transparency and public understanding, without exposing internal logic,
+    secure algorithms, or privileged operational mechanisms.
+</p>
 
-BBS is built as a fully modular ecosystem.
-Every component is designed to be:
+<div class="section">
+    <h2>Modularity in BBS</h2>
+    <p>
+        BBS is built as a fully modular ecosystem.  
+        Every component is designed to be:
+    </p>
 
-• transparent  
-• interoperable  
-• replaceable without breaking the system  
-• aligned with ethical principles  
-• verifiable through integrity layers  
+    <ul>
+        <li>transparent</li>
+        <li>interoperable</li>
+        <li>replaceable without breaking the system</li>
+        <li>aligned with ethical principles</li>
+        <li>verifiable through integrity layers</li>
+    </ul>
 
-The system grows step by step, and each module reinforces the whole.
+    <p>
+        The system grows step by step, and each module reinforces the strength and coherence of the whole.
+    </p>
+</div>
 
-Platform Modules (17 Domains)
+<div class="section">
+    <h2>Platform Modules — 17 Domains</h2>
 
-These represent the fundamental societal functions supported by BBS:
+    <p>These represent the fundamental societal functions supported by BBS:</p>
 
-1. LEO — Ethical AI Core  
-2. Unified Knowledge Base  
-3. Security & Privacy  
-4. International Cooperation  
-5. Citizen Participation  
-6. Grants & Partnerships  
-7. Democracy  
-8. Law & Justice  
-9. Education  
-10. Health & Medicine  
-11. Economy & Work  
-12. Environment & Ecology  
-13. Culture & Media  
-14. Research & AI Development  
-15. Infrastructure  
-16. SOS & Emergency Systems  
-17. BBS-ID (Identity & Verification)  
+    <table>
+        <tr><th>#</th><th>Domain</th><th>Link</th></tr>
 
-Each domain is represented transparently through public documentation.
-Internal mechanics and logic remain protected until legal and safety frameworks are complete.
+        <tr><td>1</td><td>LEO — Ethical AI Core</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/leo-ai" target="_blank">Open</a></td></tr>
 
-System Modules (Internal)
+        <tr><td>2</td><td>Unified Knowledge Base</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/knowledge" target="_blank">Open</a></td></tr>
 
-In addition to the platform domains, BBS contains internal modules that support the ecosystem.
-Examples include:
+        <tr><td>3</td><td>Security & Privacy</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/security" target="_blank">Open</a></td></tr>
 
-• Accounting & Anti-Corruption Engine  
-• Integrity Core Components  
-• Server and Communication Infrastructure  
-• Administrative Tools  
-• Library and Self-Reflection Systems  
-• Monitoring and Support Modules  
+        <tr><td>4</td><td>International Cooperation</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/international" target="_blank">Open</a></td></tr>
 
-These are internal structures and do not operate as external services.
+        <tr><td>5</td><td>Citizen Participation</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/citizens" target="_blank">Open</a></td></tr>
 
-Why Modularity Matters
+        <tr><td>6</td><td>Grants & Partnerships</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/partners" target="_blank">Open</a></td></tr>
 
-Modularity ensures:
+        <tr><td>7</td><td>Democracy</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/democracy" target="_blank">Open</a></td></tr>
 
-• safety — failures do not break the entire system  
-• transparency — every part can be audited independently  
-• flexibility — features can evolve without reconstructing the core  
-• scalability — the system can grow gradually  
-• reliability — standardized interfaces prevent chaotic development  
+        <tr><td>8</td><td>Law & Justice</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/justice" target="_blank">Open</a></td></tr>
 
-BBS is not a single program.
-It is a living, multi-layered architecture.
+        <tr><td>9</td><td>Education</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/education" target="_blank">Open</a></td></tr>
 
-What This Showcase Does NOT Reveal
+        <tr><td>10</td><td>Health & Medicine</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/health" target="_blank">Open</a></td></tr>
 
-For security and structural integrity, this page does not include:
+        <tr><td>11</td><td>Economy & Work</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/economy" target="_blank">Open</a></td></tr>
 
-• module-to-module API schemas  
-• internal decision-making logic  
-• protected institutional workflows  
-• cryptographic seeds or chain algorithms  
-• operational privileged functions  
+        <tr><td>12</td><td>Environment & Ecology</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/ecology" target="_blank">Open</a></td></tr>
 
-These remain internal to prevent misuse or reverse-engineering.
+        <tr><td>13</td><td>Culture & Media</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/culture" target="_blank">Open</a></td></tr>
 
-Public Roadmap for Modules
+        <tr><td>14</td><td>Research & AI Development</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/ai" target="_blank">Open</a></td></tr>
 
-• Phase 1 — public descriptions, documentation, transparency  
-• Phase 2 — non-sensitive demonstrations and UI previews  
-• Phase 3 — controlled release of partial specifications  
-• Phase 4 — integration with public oversight frameworks  
+        <tr><td>15</td><td>Infrastructure</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/infrastructure" target="_blank">Open</a></td></tr>
 
-Final Note
+        <tr><td>16</td><td>SOS & Emergency Systems</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/sos" target="_blank">Open</a></td></tr>
 
-The purpose of this public showcase is to introduce the scale, structure,
-and ethical foundation of BBS — not to release operational details.
+        <tr><td>17</td><td>BBS-ID — Identity & Verification</td>
+            <td><a href="https://github.com/BBS-contact/BBS-Open-System/tree/main/platform/bbs-id" target="_blank">Open</a></td></tr>
 
-BBS modules form one coherent ecosystem.
-They cannot be separated, sold, or used independently without breaking the
-ethical and structural integrity of the whole.
+    </table>
+</div>
 
-BBS begins small — but it is designed to grow into a complete transparent governance architecture.
+<div class="section">
+    <h2>Internal Modules (Non-Public)</h2>
+
+    <p>
+        In addition to the visible platform domains, BBS contains internal structural components:
+    </p>
+
+    <ul>
+        <li>Accounting & Anti-Corruption Engine</li>
+        <li>Integrity Core Components</li>
+        <li>Server & Communication Infrastructure</li>
+        <li>Administrative Tools</li>
+        <li>Library & Self-Reflection Systems</li>
+        <li>Monitoring and Institutional Support Modules</li>
+    </ul>
+
+    <p>
+        These systems support the ecosystem but are not designed as standalone external services.
+    </p>
+</div>
+
+<div class="section">
+    <h2>Why Modularity Matters</h2>
+
+    <ul>
+        <li>safety — failures do not break the entire system</li>
+        <li>transparency — every part can be audited independently</li>
+        <li>flexibility — features evolve without reconstructing the core</li>
+        <li>scalability — the ecosystem grows naturally and consistently</li>
+        <li>reliability — standardized interfaces prevent chaotic development</li>
+    </ul>
+
+    <p>
+        BBS is not a single program.  
+        It is a living, multi-layered architecture.
+    </p>
+</div>
+
+<div class="section">
+    <h2>What This Showcase Does NOT Reveal</h2>
+
+    <p>For structural and security reasons, this page does not include:</p>
+
+    <ul>
+        <li>module-to-module API schemas</li>
+        <li>internal decision-making logic</li>
+        <li>protected institutional workflows</li>
+        <li>cryptographic chains or seeds</li>
+        <li>privileged operational functions</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Public Roadmap for Modules</h2>
+
+    <ul>
+        <li>Phase 1 — public descriptions & documentation</li>
+        <li>Phase 2 — non-sensitive demonstrations & UI previews</li>
+        <li>Phase 3 — controlled release of partial specifications</li>
+        <li>Phase 4 — integration with public oversight frameworks</li>
+    </ul>
+</div>
+
+<footer>
+    © 2023–2025 Big Begins Small (BBS).  
+    All intellectual rights reserved to the original creator — Pavlo Martseniuk.  
+    Released under the BBS Public License v1.0 (BBS-PL).
+</footer>
+
+</body>
+</html>
+
